clusters/mini/jenkins.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: jenkins
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jenkins
  namespace: jenkins
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jenkins
  template:
    metadata:
      labels:
        app: jenkins
    spec:
      securityContext:
        runAsUser: 0
      containers:
      - name: jenkins
        image: docker.io/mumlawski/jenkins:latest
        ports:
          - name: http-port
            containerPort: 8080
          - name: jnlp-port
            containerPort: 50000
        volumeMounts:
          - name: jenkins-vol
            mountPath: /var/jenkins_home
          - mountPath: /var/run/
            name: docker-socket   
        securityContext:
          privileged: true             
      volumes:
        - name: jenkins-vol
          persistentVolumeClaim:
            claimName: jenkins-pvc
        - name: docker-vol
          persistentVolumeClaim:
            claimName: docker-pvc
---
kind: Service
apiVersion: v1
metadata:
  name: jenkins
  namespace: jenkins  
spec:
  selector:
    app: jenkins
  ports:
  # Default port used by the image
  - port: 8080
    targetPort: 8080
    protocol: TCP            
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: jenkins
  namespace: jenkins
spec:
  rules:
  - host: jenkins.domain.com
    http:
      paths:
      - path: /
        backend:
          serviceName: jenkins
          servicePort: 8080
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: web-allow-all
  namespace: jenkins
spec:
  podSelector:
    matchLabels:
      app: jenkins
  ingress:
  - {}
