clusters/mini/nexus.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: devops-tools
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nexus
  namespace: devops-tools
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nexus-server  
  template:
    metadata:
      labels:
        app: nexus-server
    spec:
      securityContext:
        fsGroup: 200
      containers:
        - name: nexus
          image: sonatype/nexus3:latest
          resources:
            limits:
              memory: "2Gi"
              cpu: "1000m"
            requests:
              memory: "2Gi"
              cpu: "500m"
          ports:
            - name: web-ui
              containerPort: 8081
            - name: docker-repo
              containerPort: 8085
          volumeMounts:
            - name: nexus-data
              mountPath: /nexus-data
      volumes:
        - name: nexus-data
          persistentVolumeClaim:
            claimName: nexus-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: nexus-service
  namespace: devops-tools
  annotations:
      prometheus.io/scrape: 'true'
      prometheus.io/path:   /
      prometheus.io/port:   '8081'
spec:
  selector: 
    app: nexus-server
  ports:
    - name: gui
      port: 8081
      targetPort: 8081
    - name: registry
      port: 8085
      targetPort: 8085      
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: nexus
  namespace: devops-tools
spec:
  rules:
  - host: nexus.domain.com
    http:
      paths:
      - path: /repository/my-docker-private-registry/
        backend:
          serviceName: nexus-service
          servicePort: 8085      
      - path: /
        backend:
          serviceName: nexus-service
          servicePort: 8081
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: web-allow-all
  namespace: devops-tools
spec:
  podSelector:
    matchLabels:
      app: nexus-server
  ingress:
  - {}
